--- a/static/index.html
+++ b/static/index.html
@@ -25,7 +25,7 @@
       <br />
       <form ws-send class="flex w-full">
         <input type="hidden" name="type" value="chat_message">
-        <input type="text" name="content" class="p-2 rounded w-full" placeholder="Enter message" />
+        <input type="text" name="content" class="p-2 rounded w-full" placeholder="Enter message" autofocus="true" />
         <button type="submit" class="bg-blue-600 rounded p-2 px-8">Send</button>
       </form>
     </section>
